objects/Case_Category_MTM__c.object
<CustomObject>
    <description>link cases to Case Category</description>
    <fields>
        <fullName>Case_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Category</label>
        <referenceTo>Case_Category__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case_Categories_MTM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Categories</relationshipLabel>
        <relationshipName>Case_Categories_MTM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Tag__c</fullName>
        <formula>Case_Category__r.Content_Tag_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Case Category MTM</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Category MTM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Categories MTM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>